# xapirpc-rs

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  TODO.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: lib.rs  main.rs
