[package]
authors = ["Marcello Seri <marcello.seri@citrix.com>"]
name = "xapirpc"
version = "0.2.0"
homepage = "https://github.com/mseri/xapirpc-rs"
repository = "https://github.com/mseri/xapirpc-rs.git"
readme = "README.md"
description = "Minimal RPC client for communication with xapi"
keywords = ["xapi", "xen-api", "xmlrpc"]
license = "MIT"
license-file = "LICENSE.md"

[dependencies]
base64 = "0.9.0"
clap = "2.27.1"
reqwest = "0.8.0"
xmlrpc = "0.9.0"
