[package]
authors = ["Marcello Seri"]
name = "xapirpc"
version = "0.7.0"
homepage = "https://github.com/mseri/xapirpc-rs"
repository = "https://github.com/mseri/xapirpc-rs.git"
readme = "README.md"
description = "Minimal RPC client for communication with xapi"
keywords = ["xapi", "xen-api", "xmlrpc"]
license-file = "LICENSE.md"

[dependencies]
base64 = "0.9.0"
iso8601 = "0.1.1"
preferences = "1.1.0"
quicli = "0.2.0"
reqwest = "0.8.0"
serde_json = "1.0.0"
simple-error = "0.1.10"
xmlrpc = "0.9.0"
